--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.5.3",
+    "classnames": "^2.2.6",
     "react": "^17.0.0",
     "react-bootstrap": "^1.4.0",
     "react-c3js": "^0.1.20",
